# DriftDB

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
driftdb/: __init__.py  client.py  embedder.py  flow.py  metrics.py  overlay.py  server.py  storage.py
examples/: quickstart.py  vector_only_demo.py
tests/: test_smoke.py
